cicd/k8s/ssl/11_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selfsigned-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  rules:
  - host: selfsigned.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 3000
  tls:
  - hosts:
    - selfsigned.local
    secretName: selfsigned-cert-tls
