cicd/k8s/ssl/20_ingress-service-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Gateway-ssl
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: gateway.memploi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
  tls:
  - hosts:
    - gateway.memploi.com
    secretName: selfsigned-cert-tls # Le secret où le certificat sera stocké
